--- a/src/css/Suggestion.css
+++ b/src/css/Suggestion.css
@@ -92,10 +92,11 @@
     text-align: center;
     padding: 12px;
     margin-bottom: 6px;
-    height: 60px;
+    
     width: 97%;
     border: 0;
     background: none;
+    height: 31px;
 }
 
 .add-buttton{
@@ -103,11 +104,11 @@
     text-align: center;
     padding: 12px;
     margin-bottom: 6px;
-    height: 60px;
+    /* height: 60px; */
     width: 97%;
     border: 0;
     background: none;
-    
+    height: 31px;
 }
 
 #chevron:before {
